<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:gravity="bottom">

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:hint="@string/title" android:text="@string/title"/>

    <EditText
        android:id="@+id/EditTextDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:text="@string/description" />

    <EditText
        android:id="@+id/editTextWhen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" android:hint="@string/when" android:text="0" android:visibility="gone"/>

    <Button
        android:id="@+id/buttonShowNotification"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/show_notification" android:onClick="onClickShowNotification"/>

</LinearLayout>