<?xml version="1.0" encoding="utf-8"?>
<!-- Este es el menú que añade el fragmente del Action Bar a la activity -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_camera"
          android:icon="@android:drawable/ic_menu_camera"
          android:title="@string/menu_camera"
          android:showAsAction="ifRoom|withText"
          android:actionProviderClass="com.xanxamobile.androidavanzado.actionbar.ActionProviderMine" 
          />
    <item android:id="@+id/menu_call"
          android:icon="@android:drawable/ic_menu_call"
          android:title="@string/menu_call"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/menu_agenda"
          android:title="@string/menu_agenda"
          android:icon="@android:drawable/ic_menu_agenda"
          android:showAsAction="ifRoom|withText" />
</menu>
