<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTextImageDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:hint="@string/url_image"
        android:text = "http://www.informatica.us.es/docs/logo-ETSII.png"
        >
        <requestFocus />
    </EditText>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPagerDownload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/ButtonDownload"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/download" />

        <Button
            android:id="@+id/ButtonBindService"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/bind_service" />

        <Button
            android:id="@+id/buttonAnimationChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/no_animation" />

    </LinearLayout>
    
</LinearLayout>